tests/core/data/csl/TypeLoaderTests/SyntaxErrors/struct5.csl
struct struct5
{
	badfield redonly string name;
};
